# odincontrib.aws

./: .gitignore  .travis.yml  README.rst  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  sonar-project.properties
.github/workflows/: python-package.yml  release.yml
odincontrib_aws/: __init__.py
odincontrib_aws/dynamodb/: __init__.py  batch.py  exceptions.py  indexes.py  query.py  session.py  table.py  utils.py
odincontrib_aws/dynamodb/fields/: __init__.py
odincontrib_aws/dynamodb/types/: __init__.py
src/odincontrib_aws/: __init__.py
src/odincontrib_aws/dynamodb/: __init__.py  batch.py  fields.py  indexes.py  query.py  session.py  table.py  types.py  utils.py
src/odincontrib_aws/dynamodb/fields/: __init__.py
src/odincontrib_aws/dynamodb/types/: __init__.py
tests/: conftest.py
tests/test_dynamodb/: tables.py  test_fields.py  test_session.py  test_table.py  test_types.py  test_utils.py
