[tool.poetry]
name = "odincontrib.aws"
version = "0.4.0"
description = "Odin integration with AWS"
authors = ["Tim Savage <tim@savage.company>"]
license = "BSD-3-Clause"
readme = "README.rst"
repository = "https://github.com/python-odin/odin.contrib-dynamodb"
#documentation = "https://odin.readthedocs.org"
keywords = ["aws", "dynamodb", "sqs", "data-structure", "validation", "data-mapping"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
packages = [
    { include = "odincontrib_aws", from = "src" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.6 <3.10"
odin = "~1"
six = "*"
boto3 = "^1.20.21"

[tool.poetry.dev-dependencies]
mock = "*"
pytest = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
